[package]
name = "p2p_gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
